# rules_file

./: .bazelrc  BUILD.bazel  BUILD.file.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-rules_format  bazel-testlogs  go.mod  requirements-lock.txt  requirements.in  requirements.txt  test.bazelrc
.github/workflows/: assign.yml
black/: rules.bzl
black/format/: BUILD.bazel
black/format/src/: __main__.py
buildifier/: rules.bzl
file/: BUILD.bazel  deleted-packages-diff.sh.tpl  deleted-packages-gen.sh.tpl  deleted-packages.sh.tpl  directory.py  find-packages-runner.sh.tpl  rules.bzl  workspace.bzl
file/deleted-packages/: BUILD.bazel
file/deleted-packages/src/: __main__.py
file/find-packages/src/: __main__.py
file/test/: BUILD.bazel  test_basic.sh  test_directory.sh  test_untar.sh
file/test/bazel/: .bazelrc  WORKSPACE.bazel
file/test/bazel/directory/: BUILD.bazel
file/test/bazel/untar/: BUILD.bazel
format/: BUILD.bazel  providers.bzl  rules.bzl
generate/: BUILD.bazel  multi-runner.sh.tpl  providers.bzl  rules.bzl  runner.sh.tpl  tester.sh.tpl
generate/diff/: BUILD.bazel  bin.sh
generate/run/: BUILD.bazel
generate/run/src/: main.py  write.py
generate/run/src/rulesfile/generaterun/: check.py  main.py
gofmt/: BUILD.bazel  main.go  rules.bzl
pip/: BUILD.bazel  _black.py
rules/: init.bzl  workspace.bzl
rules/buildifier/: rules.bzl
rules/file/: workspace.bzl
rules/format/: rules.bzl  runner.sh.tpl
scripts/: format.sh
tools/: BUILD.bazel  deleted.bazelrc  deleted.bazelrc.tpl  deleted_packages.bazelrc  format.sh  gen-bazelrc.sh
util/: BUILD.bazel  path.bzl
