package(default_visibility = ["//visibility:public"])

filegroup(
    name = "buildifier_files",
    srcs = glob(
        [
            "files/**/*.bazel",
            "files/**/*.bzl",
            "files/**/BUILD",
            "files/**/WORKSPACE",
        ],
        ["**/bazel-*/**"],
    ),
)

filegroup(
    name = "common",
    srcs = glob(
        ["files/**/*"],
        [
            "**/docs/**",
            "**/test/**",
        ],
    ),
)
