package(default_visibility = ["//visibility:public"])

filegroup(
    name = "black_files",
    srcs = glob(
        [
            "files/**/*.py",
        ],
    ),
)

filegroup(
    name = "buildifier_files",
    srcs = glob(
        [
            "files/**/*.bazel",
            "files/**/*.bzl",
            "files/**/BUILD",
            "files/**/WORKSPACE",
        ],
    ),
)

filegroup(
    name = "common",
    srcs = glob(
        ["files/**/*"],
        [
            "**/docs/**",
            "**/test/**",
        ],
    ),
)
