load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "deleted-packages.sh.tpl",
    "find-packages-runner.sh.tpl",
])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
)

py_binary(
    name = "directory",
    srcs = ["directory.py"],
)
