load("//buildifier:rules.bzl", "buildifier")
load("//generate:rules.bzl", "format", "generate", "generate_test", "multi_generate")
load("//black:rules.bzl", "configure_black")

configure_black(
    name = "black",
    options = ["-C"],
)

format(
    name = "black_format",
    srcs = ["@rules_file_files//:black_files"],
    formatter = ":black",
    strip_prefix = "/files",
)

buildifier(
    name = "buildifier",
)

multi_generate(
    name = "format",
    deps = [
        ":black_format",
        ":buildifier_format",
    ],
)

generate_test(
    name = "format_test",
    generate = ":format",
)

format(
    name = "buildifier_format",
    srcs = ["@rules_file_files//:buildifier_files"],
    formatter = ":buildifier",
    strip_prefix = "/files",
)

sh_binary(
    name = "gen_bazelrc",
    srcs = ["gen-bazelrc.sh"],
    data = ["deleted.bazelrc.tpl"],
)
