load("//buildifier:rules.bzl", "buildifier")
load("//file:rules.bzl", "bazelrc_deleted_packages", "find_packages")
load("//generate:rules.bzl", "format", "generate", "generate_test", "multi_generate")
load("//black:rules.bzl", "configure_black")

configure_black(
    name = "black",
    options = ["-C"],
)

format(
    name = "black_format",
    srcs = ["@files//:black_files"],
    formatter = ":black",
    strip_prefix = "/files",
)

buildifier(
    name = "buildifier",
)

multi_generate(
    name = "format",
    deps = [
        ":black_format",
        ":buildifier_format",
    ],
)

generate_test(
    name = "format_test",
    generate = ":format",
)

format(
    name = "buildifier_format",
    srcs = ["@files//:buildifier_files"],
    formatter = ":buildifier",
    strip_prefix = "/files",
)

find_packages(
    name = "test_packages",
    roots = [
        "file/test/bazel",
    ],
)

bazelrc_deleted_packages(
    name = "bazelrc",
    output = "deleted_packages.bazelrc",
    packages = [
        ":test_packages",
        "@files//:packages",
    ],
)
