filegroup(
    name = "bazel",
    srcs = glob(["bazel/**/*"]),
    data = ["@files//:common"],
)

sh_test(
    name = "directory",
    srcs = ["test_directory.sh"],
    data = [":bazel"],
    tags = ["local"],
)

sh_test(
    name = "untar",
    srcs = ["test_untar.sh"],
    data = [":bazel"],
    tags = ["local"],
)

test_suite(
    name = "test",
)
