workspace(name = "better_rules_javascript_test")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Skylib

SKYLIB_VERSION = "16de038c484145363340eeaf0e97a0c9889a931b"

http_archive(
    name = "bazel_skylib",
    sha256 = "96e0cd3f731f0caef9e9919aa119ecc6dace36b149c2f47e40aa50587790402b",
    strip_prefix = "bazel-skylib-%s" % SKYLIB_VERSION,
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/%s.tar.gz" % SKYLIB_VERSION],
)

# Files

local_repository(
    name = "rules_file",
    path = "../../../external/rules_file_files/files",
)
